<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fdaj.gradetracker.add_course_activity">

    <TextView
        android:id="@+id/course_name_title"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="112dp"
        android:text="@string/course_name_title"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/is_weighted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="59dp"
        android:checked="false"
        android:text="@string/is_weighted"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_course_name"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/new_course_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/new_course_name"
        android:textSize="24sp"
        android:layout_marginLeft="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/course_name_title"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/to_add_subjects"
        android:layout_width="136dp"
        android:layout_height="68dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="67dp"
        android:text="@string/to_add_subject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/is_weighted"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="RtlHardcoded" />

</android.support.constraint.ConstraintLayout>
