<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fdaj.gradetracker.add_assignment">

    <TextView
        android:id="@+id/add_assignment_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/assignment_header"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/assignment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/assignment_name"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/add_assignment_header"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/add_assignment_header" />

    <EditText
        android:id="@+id/assignment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="due date (dd/mm/yyyy)"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="@+id/assignment_name"
        app:layout_constraintTop_toBottomOf="@+id/assignment_name"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/assignment_earned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="points earned"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/assignment_date"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/assignment_date"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/assignment_possible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/points_possible"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/assignment_earned"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/assignment_earned" />

    <Button
        android:id="@+id/add_assignment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="26dp"
        android:text="@string/add_f_assignment_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="26dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
