<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fdaj.gradetracker.view_courses_subjects">

    <TextView
        android:id="@+id/course_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/course_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/add_new_subject_button"
        android:layout_width="172dp"
        android:layout_height="50dp"
        android:text="@string/add_new_subject_button"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/subjects_view"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/subjects_view" />

    <Button
        android:id="@+id/delete_course_button"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/delete_course_button"
        app:layout_constraintLeft_toRightOf="@+id/add_new_subject_button"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/add_new_subject_button"
        android:layout_marginTop="0dp" />

    <ListView
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_title"
        android:id="@+id/subjects_view" />

    <ListView
        android:id="@+id/subjects_grade_view"
        android:layout_width="85dp"
        android:layout_height="350dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/subjects_view"
        app:layout_constraintTop_toTopOf="@+id/subjects_view" />


</android.support.constraint.ConstraintLayout>
